# handler/createOpening.go
@@ -7,6 +7,18 @@ import (
 	"github.com/jeffersonborges/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Create Opening
+// @Description Create a new job Opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param request body CreateOpeningRequest true "Request body"
+// @Success 200 {object} CreatingOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [post]
 func CreateOpeningHanlder(ctx *gin.Context) {
 	request := CreateOpeningRequest{}
 
